Initial functional app.

--- a/Source/Server/EnvironmentalStressor/appsettings.json
+++ b/Source/Server/EnvironmentalStressor/appsettings.json
@@ -8,7 +8,9 @@
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "None",
+        "System": "None",
+        "Microsoft": "None"
       }
     }
   }
