--- a/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
+++ b/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageLicenseUrl>https://github.com/matheusneder/environmental-stressor/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/matheusneder/environmental-stressor</PackageProjectUrl>
+    <Copyright>Matheus Neder</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +13,22 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
