--- a/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
+++ b/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GracefullShutdown" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Serilog" Version="2.6.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
