--- a/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
+++ b/Source/Server/EnvironmentalStressor/EnvironmentalStressor.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Graceterm" Version="1.0.0-alpha-b9" />
+    <PackageReference Include="Graceterm" Version="1.0.0-beta-b21" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Serilog" Version="2.6.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
